--- a/src/components/Guess/Guess.module.scss
+++ b/src/components/Guess/Guess.module.scss
@@ -22,4 +22,13 @@
     top: 52%;
     translate: 0 -50%;
   }
+
+  &.giveUp::before {
+    content: '😭';
+    position: absolute;
+    font-size: 0.8rem;
+    left: -1rem;
+    top: 52%;
+    translate: 0 -50%;
+  }
 }
