--- a/src/components/Dropdown/DropdownList/DropdownList.module.scss
+++ b/src/components/Dropdown/DropdownList/DropdownList.module.scss
@@ -1,5 +1,5 @@
 .menu {
-  background: var(--bg-color);
+  background: color-mix(in hsl, var(--bg-color) 80%, black);
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
   border: 1px solid color-mix(in hsl, var(--bg-color) 90%, var(--text-color));
   border-radius: 4px;
@@ -13,7 +13,12 @@
     align-items: center;
     cursor: pointer;
 
-    &:hover,
+    @media (hover: hover) {
+      &:hover {
+        background: var(--bg-color-90);
+      }
+    }
+
     &:focus-within {
       background: var(--bg-color-90);
     }
