--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,7 +5,7 @@
 
 .howToPlayBtn {
   align-self: center;
-  background-color: rgb(83, 92, 159);
+  background-color: var(--purple);
   border-radius: 6px;
   padding: 1rem 2rem;
   font-size: 1.2rem;
@@ -13,75 +13,9 @@
   border: none;
   cursor: pointer;
 
-  &:hover {
-    background-color: rgba(83, 92, 159, 0.75);
+  @media (hover: hover) {
+    &:hover {
+      background-color: color-mix(in hsl, var(--purple) 75%, transparent);
+    }
   }
 }
-
-// .inputForm {
-//   display: flex;
-//   justify-content: center;
-//   gap: 0.75rem;
-//   margin: 0 0 3rem 0;
-
-//   .input,
-//   .submitBtn {
-//     background-color: transparent;
-//     border: 2px solid var(--text-color);
-//     border-radius: 40px;
-//     color: var(--text-color);
-//     font-size: 1.1rem;
-//   }
-
-//   .input {
-//     padding: 0.5rem 0 0.5rem 1rem;
-//   }
-
-//   .submitBtn {
-//     cursor: pointer;
-//     padding: 0.5rem 1rem;
-
-//     &:hover {
-//       background-color: var(--bg-color-90);
-//     }
-//   }
-// }
-
-// .guesses {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   min-height: 260px;
-//   margin-bottom: 10rem;
-
-//   .pageControls {
-//     margin-top: auto;
-//     padding-top: 1rem;
-//     display: flex;
-//     align-items: center;
-
-//     .pageCounter {
-//       display: flex;
-//       align-items: center;
-
-//       .pageIndexBtn {
-//         background: transparent;
-//         border: none;
-//         color: var(--text-color);
-//         stroke: var(--text-color);
-//         cursor: pointer;
-//         padding: 0.25rem;
-//         border-radius: 4px;
-
-//         &:hover {
-//           background-color: var(--bg-color-90);
-//         }
-
-//         &:disabled {
-//           cursor: not-allowed;
-//           stroke: var(--bg-color-70);
-//         }
-//       }
-//     }
-//   }
-// }
