--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,4 +1,4 @@
-.triggerBtn {
+.button {
   color: var(--text-color);
   display: flex;
   align-items: center;
@@ -7,6 +7,7 @@
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid color-mix(in hsl, var(--bg-color) 70%, var(--text-color));
+  padding: 0.5rem 0.75rem;
 
   @media (hover: hover) {
     &:hover {
