--- a/src/components/GuessList/GuessList.module.scss
+++ b/src/components/GuessList/GuessList.module.scss
@@ -24,8 +24,10 @@
         padding: 0.25rem;
         border-radius: 4px;
 
-        &:hover {
-          background-color: var(--bg-color-90);
+        @media (hover: hover) {
+          &:hover {
+            background-color: var(--bg-color-90);
+          }
         }
 
         &:disabled {
