--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,8 +1,10 @@
 .nav {
   display: flex;
   justify-content: flex-end;
+  gap: 1rem;
   padding: 1rem;
   position: sticky;
   top: 0;
   border-bottom: 1px solid var(--bg-color-90);
+  z-index: 2;
 }
