--- a/src/index.scss
+++ b/src/index.scss
@@ -27,9 +27,16 @@ body {
   --badge-info-color: #cceaf7;
   ////////
 
+  --purple: rgb(83, 92, 159);
+  --blue: rgb(191, 228, 255);
+  --faded-yellow: color-mix(in hsl, yellow 50%, var(--text-color));
+  --yellow: yellow;
+  --orange: orangered;
+  --red: #ff2b2b;
+
   &.light-theme {
     --text-color: rgb(74, 73, 83);
-    --bg-color: #f2f2f2;
+    --bg-color: #eee;
 
     // badge
     --badge-success-bg: rgba(0, 183, 85, 0.1);
@@ -41,6 +48,13 @@ body {
     --badge-info-bg: #219dff33;
     --badge-info-color: #0041a5;
     ///////
+    ///
+
+    --blue: rgb(89, 141, 178);
+    --faded-yellow: rgb(176, 157, 53);
+    --yellow: rgb(242, 159, 0);
+    --orange: #ff5400;
+    --red: red;
   }
 }
 
@@ -52,6 +66,12 @@ body {
   flex-direction: column;
   margin: 0;
   font-family: sans-serif;
+
+  #root {
+    display: flex;
+    flex-direction: column;
+    min-height: 300vh;
+  }
 }
 
 #root {
