--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,7 +5,7 @@
 
 .howToPlayBtn {
   align-self: center;
-  background-color: var(--purple);
+  background-color: rgb(83, 92, 159);
   border-radius: 6px;
   padding: 1rem 2rem;
   font-size: 1.2rem;
@@ -15,7 +15,7 @@
 
   @media (hover: hover) {
     &:hover {
-      background-color: color-mix(in hsl, var(--purple) 75%, transparent);
+      background-color: rgba(83, 92, 159, 0.75);
     }
   }
 }
