--- a/src/components/Dropdown/DropdownList/DropdownList.module.scss
+++ b/src/components/Dropdown/DropdownList/DropdownList.module.scss
@@ -1,8 +1,8 @@
 .menu {
-  background: color-mix(in hsl, var(--bg-color) 80%, black);
+  background: var(--dropdown-menu-bg);
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
   border: 1px solid color-mix(in hsl, var(--bg-color) 90%, var(--text-color));
-  border-radius: 4px;
+  border-radius: 6px;
   list-style: none;
   padding: 0;
   margin: 4px 0 0;
