fix modal issue + add play again btn

--- a/src/components/Dropdown/DropdownList/DropdownList.module.scss
+++ b/src/components/Dropdown/DropdownList/DropdownList.module.scss
@@ -36,7 +36,7 @@
       color: inherit;
       text-align: left;
       cursor: inherit;
-      padding: 10px;
+      padding: 20px 10px;
     }
   }
 }
