--- a/src/components/InputForm/InputForm.module.scss
+++ b/src/components/InputForm/InputForm.module.scss
@@ -1,7 +1,7 @@
 .inputForm {
   display: flex;
   flex-direction: column;
-  margin: 0 0 2.5rem 0;
+  margin: 2rem 0 2.5rem 0;
   gap: 1rem;
   align-self: center;
 
@@ -17,19 +17,17 @@
       border-radius: 40px;
       color: var(--text-color);
       font-size: 1.1rem;
+      padding: 0.5rem 0 0.5rem 1rem;
+
+      &:disabled {
+        cursor: not-allowed;
+      }
     }
 
     .submitBtn {
       border-radius: 40px;
       color: var(--text-color);
       font-size: 1.1rem;
-    }
-
-    .input {
-      padding: 0.5rem 0 0.5rem 1rem;
-    }
-
-    .submitBtn {
       cursor: pointer;
       padding: 0;
       position: relative;
