--- a/src/components/InputForm/InputForm.module.scss
+++ b/src/components/InputForm/InputForm.module.scss
@@ -21,6 +21,7 @@
 
       &:disabled {
         cursor: not-allowed;
+        opacity: 0.5;
       }
     }
 
@@ -49,6 +50,7 @@
 
       &:disabled {
         cursor: not-allowed;
+        opacity: 0.5;
       }
 
       .gradient {
