--- a/src/components/Dropdown/DropdownList/DropdownList.module.scss
+++ b/src/components/Dropdown/DropdownList/DropdownList.module.scss
@@ -37,6 +37,8 @@
       text-align: left;
       cursor: inherit;
       padding: 20px 10px;
+      display: flex;
+      align-items: center;
     }
   }
 }
