--- a/src/components/InputForm/InputForm.module.scss
+++ b/src/components/InputForm/InputForm.module.scss
@@ -11,17 +11,21 @@
     justify-content: center;
     gap: 0.75rem;
 
-    .input {
-      background-color: transparent;
-      border: 2px solid var(--text-color);
-      border-radius: 40px;
-      color: var(--text-color);
-      font-size: 1.1rem;
-      padding: 0.5rem 0 0.5rem 1rem;
+    .inputWrapper {
+      position: relative;
 
-      &:disabled {
-        cursor: not-allowed;
-        opacity: 0.5;
+      .input {
+        background-color: transparent;
+        border: 2px solid var(--text-color);
+        border-radius: 40px;
+        color: var(--text-color);
+        font-size: 1.1rem;
+        padding: 0.5rem 0 0.5rem 1rem;
+
+        &:disabled {
+          cursor: not-allowed;
+          opacity: 0.5;
+        }
       }
     }
 
